# ai-colors-engine

./: README.md  color_generator.ipynb  pyproject.toml  requirements.txt
server/: .flaskenv  app.py
server/static/: app.css
server/templates/: index.html
