[tool.poetry]
name = "ai-colors-engine"
version = "0.1.0"
description = "AI Colors Engine"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ai_colors_engine"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
ruff = "^0.0.261"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
